--- a/app/globals.css
+++ b/app/globals.css
@@ -3,3 +3,15 @@
   padding: 0;
   margin: 0;
 }
+
+/* globals.css */
+
+body {
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
+  /* Adjust size as needed */
+  -webkit-font-smoothing: antialiased;
+  /* For WebKit-based browsers */
+  -moz-osx-font-smoothing: grayscale;
+  /* For Firefox on macOS */
+}
